// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-Fpjer faPOqa sc-jWMDeY fkTPFb"
      color="#fff"
    >
      <div
        class="sc-bQSzLK kZgTri"
      >
        10
        %
      </div>
      <div
        class="sc-jHsRUr dwPeIQ"
        style="width: 10%;"
      >
        <div
          class="sc-fXwuiW fRyTCZ"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-Fpjer faPOqa sc-jWMDeY fkTPFb"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-bQSzLK kZgTri"
      >
        10
        %
      </div>
      <div
        class="sc-jHsRUr edPeLa"
        style="width: 10%;"
      >
        <div
          class="sc-fXwuiW fRyTCZ"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-Fpjer ilFCSj sc-jWMDeY fkTPFb"
      color="#fff"
    >
      <div
        class="sc-bQSzLK kZgTri"
      >
        10
        %
      </div>
      <div
        class="sc-jHsRUr dwPeIQ"
        style="width: 10%;"
      >
        <div
          class="sc-fXwuiW fRyTCZ"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
